src-tauri/src/data/snapshots/app__data__language_group__tests__epoch_when_phoneme_and_protophoneme_exist_keeps_phoneme.snap
---
source: src/data/language_group.rs
expression: pre
---
version: 0.1.0
family_id: 00000000-0000-0000-0000-000000000000
protolangs:
  - name: "1'"
    phonemes:
      00000000-0000-0000-0000-000000000000:
        ortho: "2"
        primary:
          Plosive:
            place: Bilabial
            voiced: true
            attachments: []
        allo: []
    description: ~
langs: []

