src-tauri/src/data/snapshots/app__data__language_group__tests__merge_removes_nonexistant_ancestors_and_referents.snap
---
source: src/data/language_group.rs
expression: "{ let mut pre = pre.clone(); pre.merge(&post_a); pre }"
---
version: 0.1.0
family_id: 00000000-0000-0000-0000-000000000000
protolangs:
  - name: "1"
    phonemes: {}
    description: ~
langs:
  - name: "2"
    phonemes: {}
    description: ~
    ancestors: []

